BE-54, refactor: @sonjh919 comment, .collect(Collectors.toList()) -> .toList()
Signed-off-by: yjkellyjoo <yejinkellyjoo@gmail.com>